[metadata]
name = OpenVAS XML Report Converter
version = 0.0.1
description = a flask-based microweb page that helps convert xml reports from GSM into xlsx or docx files
long_description = file: README.md, LICENSE, CHANGELOG
long_description_content_type = text/markdown

author = Eduardo Ferreira @dudacgf
url =  https://github.com/dudacgf/ovr-converter
project_urls =
    Source Code = https://github.com/dudacgf/ovr-converter
    Documentation = https://github.com/dudacgf/ovr-converter/blob/master/README.md
    Issues = https://github.com/TheGroundZero/openvasreporting/issues/

license = GPL-3.0-or-later
keywords = OpenVAS OpenVAS-reports Excel xlsxwriter xlsx reporting reports report flask bootstrap
classifiers =
   Development Status :: 1 - Initial Release
   Environment :: Web
   Intended Audience :: End Users/Desktop
   Intended Audience :: Information Technology
   Intended Audience :: Other Audience
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
   Natural Language :: English
   Programming Language :: Python
   Topic :: Internet :: Log Analysis
   Topic :: Security

[options]
include_package_data = True
packages = find:
install_requires =
    Flask>=3.0.3
    Flask-Session>=0.8.0
    Bootstrap-Flask>=2.4.0
    PyYAML
    OpenVAS-Reporting>=1.5.2
    defusedxml
    pydash
python_requires = >=3.9

[options.entry_points]
console_scripts = 
    ovr-converter = ovrgen-site/__init__.py





